task: yes/no buttons for hint and voice synthesis #33

--- a/front-end/src/app/users/user-form/user-form.component.html
+++ b/front-end/src/app/users/user-form/user-form.component.html
@@ -18,9 +18,15 @@
 
   Police d'écriture : <!--normal moyen gros--> <br>
 
-  Indice : <!--oui/non--> <br>
+  Indice : <!--oui/non-->
+    <input type="radio" name="indice" value="oui" > Oui
+    <input type="radio" name="indice" value="non" > Non
+  <br>
 
-  Synthèse vocale : <!--oui/non--> <br>
+  Synthèse vocale : <!--oui/non-->
+    <input type="radio" name="vocale" value="oui" > Oui 
+    <input type="radio" name="vocale" value="non" > Non
+  <br>
 
   <label for="alzheimerStade">
     Stade Alzheimer : <br>
