fix: multiple associations playing as a sequence. #13

--- a/front-end/src/app/quizzes/play-association/play-association.component.html
+++ b/front-end/src/app/quizzes/play-association/play-association.component.html
@@ -25,3 +25,8 @@
         </div>
     </div>
 </div>
+
+<!-- 
+    element ref element -> position absolu d bouton
+    view Child
+passer en paramètre les x1 y1, x2 y2 avec chaque connection-->
