--- a/front-end/src/app/caregiver/user-stats/user-stats.component.scss
+++ b/front-end/src/app/caregiver/user-stats/user-stats.component.scss
@@ -19,3 +19,16 @@ hr {
 h2 {
     color: gray
 }
+
+#quiz-stats {
+    margin-top: 10px;
+    width:400px;
+    height: 100px;
+    border-radius:25px;
+    font-size: 32px;
+}
+
+#quiz-stats:hover {
+    background-color: grey;
+    color: white;
+}
