add user quiz stats #54

--- a/front-end/src/app/caregiver/user-stats/user-stats.component.html
+++ b/front-end/src/app/caregiver/user-stats/user-stats.component.html
@@ -17,5 +17,5 @@
 </div>
 
 <div style="display: flex; justify-content: center;">
-    <button id="quiz-stats">Statistiques par Quiz</button>
+    <button id="quiz-stats" routerLink="/theme-list/{{this.user.firstName}}-{{this.user.lastName}}/stats">Statistiques par Quiz</button>
 </div>
