--- a/front-end/src/app/quizzes/quiz-list/quiz-list.component.html
+++ b/front-end/src/app/quizzes/quiz-list/quiz-list.component.html
@@ -8,6 +8,6 @@
 <app-quiz-form></app-quiz-form>
 <div class="quiz-list">
     <div class="quiz" *ngFor="let quiz of quizList">
-        <app-quiz [quiz]="quiz" [user]="user" (startQuiz)="startQuiz($event)" (deleteQuiz)="deleteQuiz($event)" (editQuiz)="editQuiz($event)"></app-quiz>
+        <app-quiz [quiz]="quiz" [user]="user" [type]="type" (startQuiz)="startQuiz($event)" (deleteQuiz)="deleteQuiz($event)" (editQuiz)="editQuiz($event)"></app-quiz>
     </div>
   </div>
