--- a/front-end/src/app/quizzes/quiz/quiz.component.html
+++ b/front-end/src/app/quizzes/quiz/quiz.component.html
@@ -1,6 +1,7 @@
 <div class="quiz" style="display: flex; flex-direction: column;">
     <h2 style="display: flex; justify-content:center;">{{quiz.name}}</h2>
-    <img src="/assets/quiz-img/quiz-{{quiz.id}}.jpg" alt="quiz-img" (click)="start()">
+    <img *ngIf="type==='play'" src="/assets/quiz-img/quiz-{{quiz.id}}.jpg" alt="quiz-img" (click)="start()">
+    <img *ngIf="type==='stats'" src="/assets/quiz-img/quiz-{{quiz.id}}.jpg" alt="quiz-img" (click)="goToQuizStats()">
     <button style= "float: right;" class="button-card" (click)="delete()">Supprimer</button>
     <button style="float: right;" class="button-card edit" routerLink="/edit-quiz/{{quiz.id}}">Edit</button>
 </div>
