--- a/front-end/src/app/caregiver/user-quiz-stats/user-quiz-stats.component.scss
+++ b/front-end/src/app/caregiver/user-quiz-stats/user-quiz-stats.component.scss
@@ -25,3 +25,11 @@ h2 {
     max-height: 166px;
     border-radius: 54px;
 }
+
+.positive {
+    color: rgb(91, 202, 91);
+}
+
+.negative {
+    color: rgb(224, 65, 65);
+}
