implementation of charts for user stats #54

--- a/front-end/src/app/caregiver/user-quiz-stats/user-quiz-stats.component.scss
+++ b/front-end/src/app/caregiver/user-quiz-stats/user-quiz-stats.component.scss
@@ -1,3 +1,5 @@
+@import '~chart.js/dist/Chart.css';
+
 #back {
     margin-top: 10px;
     max-width: 121px;
@@ -33,3 +35,51 @@ h2 {
 .negative {
     color: rgb(224, 65, 65);
 }
+
+.container {
+    display: grid;
+    grid-template-rows: auto 1fr;
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "header"
+      "content";
+    height: 100vh;
+  }
+  
+  .header {
+    grid-area: header;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+  }
+  
+  .header img {
+    margin-right: 10px;
+  }
+  
+  .header div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  
+  .content {
+    grid-area: content;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+  }
+  
+  .info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 20px;
+  }
+  
+  .chart {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
