--- a/front-end/src/app/quizzes/play-association/play-association.component.html
+++ b/front-end/src/app/quizzes/play-association/play-association.component.html
@@ -6,26 +6,31 @@
     <div class = "association-game">
         <div class= "connectors-left">
             <div *ngFor = "let value of shuffledValuesToConnect; let i=index" >
-                <Button style="width: 500px; height:100px" class = "button" *ngIf = "value != null" (click)="selectLeft(value)">
+                <Button attr.id = "left-button{{i}}" style="width: 500px; height:100px" class = "button" *ngIf = "value != null" (click)="selectLeft(value, i)">
                     {{value}}
                 </Button>
             </div>
         </div>
         <div class = "connectors-right">
             <div *ngFor = "let value of shuffledValuesToBeConnected; let i=index">
-                <Button style="width: 500px; height:100px" class = "button" *ngIf = "value != null" (click)="selectRight(value)">
+                <Button attr.id = "right-button{{i}}" style="width: 500px; height:100px" class = "button" *ngIf = "value != null" (click)="selectRight(value, i)">
                     {{value}}
                 </Button>
             </div>
         </div>
-        <div *ngIf="currentConnections.length > 0">
-            <div *ngFor="let connection of this.currentConnections; let i = index;">
-                <app-connection [id] = "i" [connection]="connection" [shuffledValuesToConnect] = "this.shuffledValuesToConnect" [shuffledValuesToBeConnected] = "this.shuffledValuesToBeConnected"></app-connection>
-            </div>
-        </div>
     </div>
 </div>
+<svg #linescontainer style="position: absolute; width:100%; height:100%; top: 0;
+left: 0; pointer-events: none;">
+    <!-- <line id="line0" x1="0" y1="0" x2="1000" y2="300" stroke="black" stroke-width="10"/>
+    <line stroke="black" stroke-width="10" x1="0" y1="0" x2="933" y2="659.7291870117188"></line> -->
+</svg>
 
+<!-- <div *ngIf="currentConnections.length > 0">
+    <div *ngFor="let connection of this.currentConnections; let i = index;">
+        <app-connection [id] = "i" [connection]="connection" [shuffledValuesToConnect] = "this.shuffledValuesToConnect" [shuffledValuesToBeConnected] = "this.shuffledValuesToBeConnected"></app-connection>
+    </div>
+</div> -->
 <!-- 
     element ref element -> position absolu d bouton
     view Child
