--- a/front-end/src/app/quizzes/play-association/play-association.component.scss
+++ b/front-end/src/app/quizzes/play-association/play-association.component.scss
@@ -20,3 +20,10 @@
     padding: 20px;
     margin-left: 100px;
 }
+
+svg {
+    position: absolute;
+    // top: 50%; 
+    // left: 50%; 
+    // transform: translate(-50%, -50%);
+  }
