fix back buttons #54

--- a/front-end/src/app/caregiver/user-quiz-stats/user-quiz-stats.component.html
+++ b/front-end/src/app/caregiver/user-quiz-stats/user-quiz-stats.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="header">
-      <img id="back" src="/assets/back.png" alt="back" routerLink="/user-management">
+      <img id="back" src="/assets/back.png" alt="back" routerLink="/theme-list/{{user.firstName}}-{{user.lastName}}/stats">
       <div>
         <img id="user-img" alt="user-img" src="{{user.photo}}">
         <h1>{{user.firstName}} {{user.lastName}}</h1>
