--- a/front-end/src/app/quizzes/theme-list/theme-list.component.html
+++ b/front-end/src/app/quizzes/theme-list/theme-list.component.html
@@ -1,5 +1,6 @@
 <div style="display: flex; flex-direction: row; justify-content: space-between;">
-    <img id="back" src="/assets/back.png" alt="back" routerLink="">
+    <img *ngIf="type==='play'" id="back" src="/assets/back.png" alt="back" routerLink="">
+    <img *ngIf="type==='stats'" id="back" src="/assets/back.png" alt="back" routerLink="/user-stats/{{user.firstName}}-{{user.lastName}}">
     <div style="display: flex; flex-direction: row; justify-content: flex-end;">
         <h1 style="display: flex; justify-content: flex-end;">{{user.firstName}} {{user.lastName}}</h1>
         <img id="user-img" style="display: flex; justify-content: flex-end;" alt="user-img" src="{{user.photo}}">
