--- a/front-end/src/app/caregiver/user-stats/user-stats.component.html
+++ b/front-end/src/app/caregiver/user-stats/user-stats.component.html
@@ -1,7 +1,14 @@
 <div style="display: flex; flex-direction: column; justify-content: space-between;">
 <div style="display: flex; flex-direction: row; justify-content: space-between;">
-    <img id="back" style="margin:20px" src="/assets/back.png" alt="back" routerLink="/user-management">
-    <h1 style="display: flex; justify-content: center; align-self: center">Statistiques utilisateur</h1>
+    <div style="display:flex; flex-direction: row;">
+        <img id="back" style="margin:20px" src="/assets/back.png" alt="back" routerLink="/user-management">
+        <h1 style="color:gray; align-self: center;">Retour</h1>
+    </div>
+    <div style="display: flex; flex-direction: row;">
+        <h1 style="display: flex; justify-content: center; align-self: center; margin-right: 50px;">Statistiques utilisateur</h1>
+        <img src="/assets/stats.png" alt="stats" style="max-width: 169px; max-height: 169px;">
+    </div>
+    <div></div>
 </div>
 <hr>
 <div style="display: flex; flex-direction: column; margin: 0 auto;">
