--- a/front-end/src/app/caregiver/user-stats/user-stats.component.scss
+++ b/front-end/src/app/caregiver/user-stats/user-stats.component.scss
@@ -26,6 +26,8 @@ h2 {
     height: 100px;
     border-radius:25px;
     font-size: 32px;
+    border: 3px solid black;
+    background-color: rgb(207, 207, 207);
 }
 
 #quiz-stats:hover {
