--- a/front-end/src/app/caregiver/user-management/user-management.component.html
+++ b/front-end/src/app/caregiver/user-management/user-management.component.html
@@ -1,12 +1,22 @@
-<div>
-    <img id="back" style="margin:20px" src="/assets/back.png" alt="back" routerLink="/home-profil-choice">
-    <h1 style="display: flex; justify-content: center; align-self: center; margin-top: 100px;">Sélectionner un patient</h1>
+<div class="top">
+    <div>
+        <img id="back" style="margin:20px" src="/assets/back.png" alt="back" routerLink="/home-profil-choice">
+        <h2>Retour</h2>
+    </div>
+    <div class="button-div" routerLink="/user-edit">
+        <img src="/assets/add.png" alt="add">
+        <h3 style="margin-top: 45px; margin-left: 20px; margin-right: 5px;">Ajouter un utilisateur dans la liste</h3>
+    </div>
+    <div class="button-div">
+        <img src="/assets/edit.png" alt="edit">
+        <h3 style="margin-top: 45px; margin-left: 20px; margin-right: 5px;">Accéder à l'éditeur de Quiz</h3>
+    </div>
 </div>
-
+<h1 style="text-align: center;">Sélectionner un patient</h1>
 <div style="display: flex; flex-direction: row;">
     <div *ngFor="let user of userList">
         <div class="user">
-            <img class="user-img" alt="user-img" src={{user.photo}} routerLink="/user-stats/{{user.firstName}}-{{user.lastName}}">
+            <img class="user-img" alt="user-img" src={{user.photo}} routerLink="/user-stats-menu/{{user.id}}">
             <h1>{{user.firstName}} {{user.lastName}}</h1>
         </div>
     </div>
