--- a/front-end/src/app/caregiver/user-management/user-management.component.scss
+++ b/front-end/src/app/caregiver/user-management/user-management.component.scss
@@ -13,3 +13,40 @@
     max-width: 121px;
     max-height: 121px;
 }
+
+.top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.top h2 {
+    margin-top: 0;
+    color: grey;
+    margin-left: 30px;
+}
+
+#editor-button {
+    display: block;
+    border-radius: 25px;
+    width: 354px;
+    height: 75px;
+    font-size: 24px;
+}
+
+#editor-button:hover {
+    background-color: grey;
+    color: white;
+}
+
+.button-div {
+    display: flex; 
+    flex-direction: row;
+    border: 3px solid black;
+    background-color: rgb(207, 207, 207);
+    border-radius: 22px;
+}
+
+.button-div:hover {
+    background-color: grey;
+    color: white;
+}
