fix wrong routes with back buttons

--- a/front-end/src/app/caregiver/user-stats/user-stats.component.html
+++ b/front-end/src/app/caregiver/user-stats/user-stats.component.html
@@ -1,7 +1,7 @@
 <div style="display: flex; flex-direction: column; justify-content: space-between;">
 <div style="display: flex; flex-direction: row; justify-content: space-between;">
     <div style="display:flex; flex-direction: row;">
-        <img id="back" style="margin:20px" src="/assets/back.png" alt="back" routerLink="/user-management">
+        <img id="back" style="margin:20px" src="/assets/back.png" alt="back" routerLink="/user-stats-menu/{{user.id}}">
         <h1 style="color:gray; align-self: center;">Retour</h1>
     </div>
     <div style="display: flex; flex-direction: row;">
