--- a/front-end/src/app/caregiver/user-stats-menu/user-stats-menu.component.html
+++ b/front-end/src/app/caregiver/user-stats-menu/user-stats-menu.component.html
@@ -1,6 +1,6 @@
 <div class="top">
     <div>
-        <img id="back" style="margin:20px" src="/assets/back.png" alt="back" routerLink="/home-profil-choice">
+        <img id="back" style="margin:20px" src="/assets/back.png" alt="back" routerLink="/user-management">
         <h2>Retour</h2>
     </div>
     <div>
