--- a/front-end/src/app/caregiver/user-quiz-stats/user-quiz-stats.component.html
+++ b/front-end/src/app/caregiver/user-quiz-stats/user-quiz-stats.component.html
@@ -16,9 +16,9 @@
         <h2 *ngIf="this.lastGame===0 && type==='global'">Dernière partie : Aujourd'hui</h2>
         <h2 *ngIf="this.lastGame===1 && type==='global'">Dernière partie: Il y a 1 jour</h2>
         <h2 *ngIf="this.lastGame>1 && type==='global'">Dernière partie: Il y a {{this.lastGame}} jours</h2>
-        <h2>Progression: <span [ngClass]="{'positive': this.progression > 0, 'negative': this.progression < 0}">{{this.progression}}%</span></h2>
-        <h2 *ngIf="type==='date'">Similitude d'erreur : <span [ngClass]="{'positive': errorSimilarity < 50, 'negative': errorSimilarity > 50}">{{errorSimilarity}}%</span></h2>
-        <h2>Temps moyen par question : Todo</h2>
+        <h2><span class="underline" (click)="showHelp('progression')">Progression</span>: <span [ngClass]="{'positive': this.progression > 0, 'negative': this.progression < 0}">{{this.progression}}%</span></h2>
+        <h2 *ngIf="type==='date'"><span class="underline" (click)="showHelp('error')">Similitude d'erreur</span>: <span [ngClass]="{'positive': errorSimilarity < 50, 'negative': errorSimilarity > 50}">{{errorSimilarity}}%</span></h2>
+        <h2><span class="underline" (click)="showHelp('time')">Temps moyen par question</span>: {{meanTime}}s (<span [ngClass]="{'positive':timeProgression < 0, 'negative':timeProgression > 0}">{{timeProgression}}s</span>)</h2>
       </div>
       <div class="chart">
         <select (change)="updateChart($event.target.value)" style="border-radius: 5px; padding: 10px;">
