feat: theme form with theme editor screen working. #67

--- a/front-end/src/app/quizzes/theme-editor/theme-editor.component.html
+++ b/front-end/src/app/quizzes/theme-editor/theme-editor.component.html
@@ -1,5 +1,11 @@
-<div style="display: flex; flex-direction: row; justify-content: space-between;">
-    <img id="back" src="/assets/back.png" alt="back" routerLink="/user-management">
+<div class="top">
+    <div style="display: flex; flex-direction: row; justify-content: space-between;">
+        <img id="back" src="/assets/back.png" alt="back" routerLink="/user-management">
+    </div>
+    <div class="button-div" routerLink="/theme-form">
+        <img src="/assets/edit.png" alt="edit">
+        <h3 style="margin-top: 45px; margin-left: 20px; margin-right: 5px;">Créer nouveau thème</h3>
+    </div>
 </div>
 <h1 style="display: flex; justify-content: center;">Choisissez un thème</h1>
 <div style="display: flex; flex-wrap: wrap; justify-content: center; align-items: center; width:100%;">
