--- a/front-end/src/app/quizzes/theme-editor/theme-editor.component.scss
+++ b/front-end/src/app/quizzes/theme-editor/theme-editor.component.scss
@@ -17,3 +17,9 @@
     margin: 150px;
     margin-bottom: 100px;
 }
+
+.top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
