--- a/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.html
+++ b/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.html
@@ -1,4 +1,5 @@
-<button class="back-button" routerLink="/quiz-list/Madeleine-Duo/{{this.theme}}/play">Retour</button>
+<!-- <button class="back-button" routerLink="/quiz-list/Madeleine-Duo/{{this.theme}}/play">Retour</button> -->
+<button class="back-button" routerLink="/quiz-editor/{{this.theme}}">Retour</button>
 
 <h1>{{quiz.name}}</h1>
 <h3>Questions à choix :</h3>
