--- a/front-end/src/app/quizzes/theme-editor/theme-editor.component.html
+++ b/front-end/src/app/quizzes/theme-editor/theme-editor.component.html
@@ -2,7 +2,7 @@
     <div style="display: flex; flex-direction: row; justify-content: space-between;">
         <img id="back" src="/assets/back.png" alt="back" routerLink="/user-management">
     </div>
-    <div class="button-div" routerLink="/theme-form">
+    <div class="button-div" (click)="createTheme()">
         <img src="/assets/edit.png" alt="edit">
         <h3 style="margin-top: 45px; margin-left: 20px; margin-right: 5px;">Créer nouveau thème</h3>
     </div>
