task: modification de la police dans les formulaires d'utilisateurs #33

--- a/front-end/src/app/users/user-edit/user-edit.component.scss
+++ b/front-end/src/app/users/user-edit/user-edit.component.scss
@@ -5,3 +5,19 @@
     max-width: 121px;
     max-height: 121px;
 }
+
+.text-big {
+    font-size: 34px;
+}
+  
+.text-small {
+    font-size: 28px;
+}
+
+.user-edit {
+    font-size: 28px;
+}
+
+.input-custom {
+    font-size: 28px;
+}
