--- a/front-end/src/app/users/user-form/user-form.component.scss
+++ b/front-end/src/app/users/user-form/user-form.component.scss
@@ -1,7 +1,24 @@
 @import '../../../styles/card.scss';
 
+
 #back {
     margin-top: 10px;
     max-width: 121px;
     max-height: 121px;
+}
+
+.text-big {
+    font-size: 34px;
+}
+  
+.text-small {
+    font-size: 28px;
+}
+
+.user-form {
+    font-size: 28px;
+}
+
+.input-custom {
+    font-size: 28px;
 }
