--- a/front-end/src/app/users/user-edit/user-edit.component.html
+++ b/front-end/src/app/users/user-edit/user-edit.component.html
@@ -12,36 +12,37 @@
     </label>
     <br>
 
-    Police d'écriture : <!--petit moyen gros--><br>
-    <button>Petit</button>
-    <button>Moyen</button>
-    <button>Gros</button>
+    Paramètres de jeu : <br><br>
 
-    <span [ngClass]="{'text-big': true, 'text-small': false}"> My text </span>
-    <br>
+    Police d'écriture : <br>
+    <button class="input-custom" (click)="makeTextSmall()">Moyen</button>
+    <button class="input-custom" (click)="makeTextBig()">Gros</button>
+    
+    <span [ngClass]="{'text-big': isBigText, 'text-small': isSmallText}"> My text </span>
+    <br><br>
 
     Indice :
-    <input type="radio" name="indice" value="oui" > Oui
-    <input type="radio" name="indice" value="non" > Non
+    <input class="input-custom" type="radio" name="indice" value="oui" > Oui
+    <input class="input-custom" type="radio" name="indice" value="non" > Non
     <br>
 
     Synthèse vocale :
-    <input type="radio" name="vocale" value="oui" > Oui 
-    <input type="radio" name="vocale" value="non" > Non
+    <input class="input-custom" type="radio" name="vocale" value="oui" > Oui 
+    <input class="input-custom" type="radio" name="vocale" value="non" > Non
     <br>
     
     <label for="alzheimerStade">
       Stade Alzheimer : <br>
       Sélectionez une plage <br>
-      <input type="radio" name="alzheimerStade" value="stade leger" [formControlName]="'alzheimerStade'"> Stade léger (stade 1 à 2) <br>
-      <input type="radio" name="alzheimerStade" value="stade intermédiaire" [formControlName]="'alzheimerStade'"> Stade intermédiaire (stade 3 à 5) <br>
-      <input type="radio" name="alzheimerStade" value="stade avance" [formControlName]="'alzheimerStade'"> Stade avancé (stade 6 à 7) <br>
+      <input class="input-custom" type="radio" name="alzheimerStade" value="stade leger" [formControlName]="'alzheimerStade'"> Stade léger (stade 1 à 2) <br>
+      <input class="input-custom" type="radio" name="alzheimerStade" value="stade intermédiaire" [formControlName]="'alzheimerStade'"> Stade intermédiaire (stade 3 à 5) <br>
+      <input class="input-custom" type="radio" name="alzheimerStade" value="stade avance" [formControlName]="'alzheimerStade'"> Stade avancé (stade 6 à 7) <br>
     </label>
   
     <label for="photo">
       Photo :<br>
       Cliquer sur l'icone pour ajouter une photo
-      <input type="file" id="profil" name="profil" accept="image/png, image/jpeg" [formControlName]="'photo'">
+      <input class="input-custom" type="file" id="profil" name="profil" accept="image/png, image/jpeg" [formControlName]="'photo'">
       <br>
     </label>
 
